--- a/mac/shortcutstatus/en/index.html
+++ b/mac/shortcutstatus/en/index.html
@@ -132,7 +132,7 @@
 		        	
 		        	<section id="screenshot">
 		        			<h2>screenshot</h2>
-		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x" width="570" onload="javascript:drawImage(this)" alt="[screenshot]"/>
+		        			<img src="../image/screenshot@2x.jpg" width="570" onload="javascript:drawImage(this)" alt="[screenshot]"/>
 		        		</section>
 		        	
 		        	<section id="features">
