--- a/mac/toshowdesktop/zh/index.html
+++ b/mac/toshowdesktop/zh/index.html
@@ -143,7 +143,7 @@
 		        	
 		        	<section id="screenshot">
 		        			<h2>截图</h2>
-		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x" width="430" onload="javascript:drawImage(this)" alt="[screenshot]"/>
+		        			<img src="../image/screenshot@2x.jpg" width="430" onload="javascript:drawImage(this)" alt="[screenshot]"/>
 		        		</section>
 		        	
 		        	<section id="features">
