--- a/mac/vMemory/index.html
+++ b/mac/vMemory/index.html
@@ -10,7 +10,7 @@
 <body>
 	<script type="text/javascript" src="/js/language.js"></script>
 	<script type="text/javascript">
-	languagelink("en",true);
+	languagelink("en",true,true);
 	</script>
 </body>
 </html>
